fixed collapse buttons

--- a/css/final-project.css
+++ b/css/final-project.css
@@ -84,7 +84,7 @@ h2 {
   padding: 5rem 5.3rem 5rem 5.3rem;
 }
 
-#quizarea, #maparea {
+#quizarea, #maparea, #sources {
   background: #DCDCDC;
 }
 
